# sprite-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
scripts/: generate-sprite-sheets.py  test.lua
src/: character_test.c  sprite_test.c  sz_action.h  sz_app.c  sz_app.h  sz_character.c  sz_character.h  sz_sprite.c  sz_sprite.h  utils.h
src/sprite_sheet_generator/: generate_sprite_sheet.c
tests/: character_test.c  lua_test.c  sprite_test.c
